--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,8 @@ PyYAML==6.0.3
 starlette==0.49.3
 typing-inspection==0.4.2
 typing_extensions==4.15.0
-uvicorn==0.38.0
+uvicorn[standard]==0.38.0
 uvloop==0.22.1
 watchfiles==1.1.1
 websockets==15.0.1
+openai
